# Duck-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: FindBullet.cmake  FindSDL2.cmake
examples/: CMakeLists.txt
examples/math_testing/: CMakeLists.txt  main.cpp
examples/testing/: CMakeLists.txt  config.json  main.cpp
examples/testing/cubemaps/: resources.json  sky.cbm
examples/testing/materials/: metal.mat  mud.mat  resources.json  skybox.mat  standard.mat
examples/testing/meshes/: bunny.mesh  cube.mesh  inv_cube.mesh  resources.json  sphere.mesh
examples/testing/skys/: resources.json  sky.sky
examples/testing/textures/: CutePom.tex  Metal_AO.tex  Metal_AO.tiff  Metal_Albedo.tex  Metal_Albedo.tiff  Metal_Metallic.tex  Metal_Metallic.tiff  Metal_Normal.tex  Metal_Normal.tiff  Metal_Roughness.tex  Metal_Roughness.tiff  Mud_AO.tex  Mud_AO.tif  Mud_Albedo.tex  Mud_Albedo.tif  Mud_Normal.tex  Mud_Normal.tif  Mud_Roughness.tex  Mud_Roughness.tif  black.tex  resources.json  white.tex
src/: CMakeLists.txt  archive.cpp  archive.hpp  common.hpp  config.hpp  engine.cpp  engine.hpp  input.cpp  input.hpp  resource_manager.cpp  resource_manager.hpp
src/components/: CMakeLists.txt  camera.cpp  camera.hpp  character_controller.cpp  character_controller.hpp  lights.cpp  lights.hpp  mesh_renderer.cpp  mesh_renderer.hpp  rigidbody.cpp  rigidbody.hpp  transform.cpp  transform.hpp
src/ecs/: CMakeLists.txt  component.hpp  component.imp.hpp  component_archive.cpp  component_archive.hpp  entity.cpp  entity.hpp  entity.imp.hpp  scene.cpp  scene.hpp  scene.imp.hpp  system.cpp  system.hpp  system.imp.hpp  transform.cpp  transform.hpp
src/editor/: CMakeLists.txt  component_inspector.cpp  component_inspector.hpp  editor.cpp  editor.hpp  editor_renderer.cpp  editor_renderer.hpp  editor_window.cpp  editor_window.hpp  file_explorer.cpp  file_explorer.hpp  hierarchy.cpp  hierarchy.hpp  inspector.cpp  inspector.hpp  scene_view.cpp  scene_view.hpp  toolbar.cpp  toolbar.hpp
src/editor/imgui/: imguidock.cpp
src/engine/: CMakeLists.txt  archive.cpp  archive.hpp  common.hpp  config.hpp  engine.cpp  engine.hpp  input.hpp  resource_manager.cpp  resource_manager.hpp  scene_util.cpp  scene_util.hpp
src/graphics/: CMakeLists.txt  command_manager.cpp  command_manager.hpp  debugging.cpp  debugging.hpp  device_manager.cpp  device_manager.hpp  forward_renderer.cpp  forward_renderer.hpp  graphics.cpp  graphics.hpp  lighting.cpp  lighting.hpp  material.cpp  material.hpp  material_shader.cpp  material_shader.hpp  mesh.cpp  mesh.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  sky_box.cpp  sky_box.hpp  swapchain_manager.cpp  swapchain_manager.hpp  texture.cpp  texture.hpp  vulkan_utilities.cpp  vulkan_utilities.hpp
src/math/: CMakeLists.txt  common.hpp  config.hpp  matrices.cpp  matrices.hpp  quaternions.cpp  quaternions.hpp  transformations.cpp  transformations.hpp  vectors.cpp  vectors.hpp
src/physics/: CMakeLists.txt  physics.cpp  physics.hpp
src/shaders/: CMakeLists.txt  Duck-Standard.frag  Duck-Standard.vert  editor-shader.frag  editor-shader.vert  forward.frag  forward.vert  resources.json  skybox.frag  skybox.shd  skybox.vert  standard.frag  standard.shd  standard.vert
src/utilities/: CMakeLists.txt  archive.cpp  archive.hpp  clock.cpp  clock.hpp  common.hpp  debugging.hpp  file_io.cpp  file_io.hpp  frustum.cpp  frustum.hpp  hex.cpp  hex.hpp  macros.hpp  reflection.cpp  reflection.hpp  resource_allocator.cpp  resource_allocator.hpp  threading.cpp  threading.hpp
